WRLD-135 -  Dialogs will always get added to the header. This avoids the problem of the dialog not showing up in some cases for the "forgot login" dialog. It also prevents an issue on the game page, where the absolute layout of the panel causes the dialog widget to overlap with other components. One down side is that dialogs now take up the whole width of the browser, rather than just the width of the page that spawned them.
I looked at doing this with a PopupPanel, which worked pretty well, but I have heard tales that this does not play nice with the Flash client on Linux.

Made dialog background white rather than transparent (because the black text is hard to read on black backgrounds).

--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -389,6 +389,7 @@ img, embed, applet, object {
   margin: 0px 0px 5px 0px;
   width: 100%;
   border-bottom: 2px solid #3F8EBA;
+  background-color: #FFFFFF;
 }
 
 .pageDialog .DialogTitle {
